# ecd

./: .gitignore  CLAUDE.md  CODEBUDDY.md  Makefile  README.md  compress_db.sh  ecd
.github/workflows/: ci.yml
cli/: go.mod  go.sum  main.go
cli/docs/: README.md  architecture.md  flashcards.md  i18n.md  search.md  tui.md
cli/internal/ai/: cache.go  client.go  commands.go  format.go  init.go  model.go  prompts.go  update.go  view.go
cli/internal/cli/: cli.go
cli/internal/config/: config.go
cli/internal/dict/: db.go  models.go
cli/internal/history/: db.go
cli/internal/i18n/: i18n.go
cli/internal/render/: cjkwrap.go  wrap.go  wrap_test.go
cli/internal/repl/: base.go  messages.go  styles.go
cli/internal/search/: search.go
cli/internal/sm2/: sm2.go
cli/internal/tui/: constants.go  model.go  search_view.go
cli_deprecated/: ecd
cli_deprecated/ecdlib/: __init__.py  cli.py  display.py  flashcards.py  lang.py  sm2.py
ecdlib/: __main__.py  config.py  db.py  display.py  flashcards.py  interactive.py  lang.py  search.py
extract/: build_db.py  extract-plan.md  pyproject.toml  schema.sql
extract/docs/: README.md  edge-cases.md  extraction.md  schema.md  verification.md
extract/ecd_extract/: __init__.py  __main__.py  build.py  cli.py  collins.py  config.py  oxford.py  parse.py  utils.py
extract/ecd_extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
